# TickerLite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ai-guidance.md  requirements.md  tengxun.md
include/: databasehelper.h  httphelper.h  mainwindow.h  thememanager.h
resources/: dark.qss  light.qss
src/: databasehelper.cpp  httphelper.cpp  main.cpp  mainwindow.cpp  thememanager.cpp
